# gua

./: Cargo.toml  README.MD  TODO.MD  dist-workspace.toml  run.sh
src/: app_menus.rs  assets.rs  auto_update.rs  ba_gua.rs  gua.rs  main.rs  qigua.rs  state.rs  ui.rs  utils.rs
src/core/: ba_gua.rs  basic.rs  mod.rs
src/core/models/: gua64.rs  gua8.rs  mod.rs  yao.rs
src/core/utils/: ichang.rs  mod.rs
src/gua/: ba_gua.rs  basic.rs  yao.rs
src/qigua/: README.MD  core.rs  liu_yao.rs  time.rs  two_number.rs
src/state/: app_state.rs  global.rs
src/ui/: header.rs  home.rs  input_two_num.rs  result.rs  sidebar.rs  stage.rs  tabs.rs  update.rs
src/ui/panel/: story.rs
src/ui/stage/: about.rs  history.rs  input_two_num.rs  library.rs  qi_gua.rs  result.rs
