[package]
name = "gua"
version = "0.1.12"
edition = "2024"
repository = "https://github.com/loveloki/gua"

[dependencies]
anyhow = "1.0.100"
chinese-lunisolar-calendar = "0.2.0"
chrono = "0.4.42"
gpui = "0.2.2"
gpui-component = "0.4.1"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["json"] }
rust-embed = {version = "8.9.0", features= ["interpolate-folder-path"]}
serde = "1.0.228"
serde_json = "1.0.145"
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
